--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 
 body {
-    font-family: "Lato", sans-serif;
-    background-color: grey;
+    background-color: white;
 }
 
 
@@ -13,20 +12,13 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: grey;
+    background-color: black;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
 }
 
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    transition: 0.3s
-}
+
 
 .sidenav a:hover, .offcanvas a:focus{
     color: #f1f1f1;
@@ -38,29 +30,12 @@ body {
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-    color: black;
+    color: white;
 }
 
-.title {
-    
-    position:fixed;
-    height:110px;
-    right:0px;
-    bottom:0px;
-    margin-right: 10px;
-    text-shadow: 1px 1px 2px #999999;
-    word-wrap: break-word;
-}
 
-.title1 {
-    font-size: 30px;
-    font-weight: 700;
-}
 
-.title2 {
-    font-size: 25px;
-    font-weight: 700;
-}
+
 
 .container-fluid {
 	height:100%;
@@ -71,7 +46,7 @@ body {
 	height:100%;
 }
 
-#map{
+#myMap{
    height: 100%;
 }
 html{
